# gmail-mcp-server-rust

./: Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/gmail/: auth.rs  client.rs  filters.rs  labels.rs  mod.rs  types.rs  utils.rs
src/mcp/: mod.rs  server.rs  tools.rs  types.rs
tests/: integration_tests.rs
